apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'com.google.gms.google-services'

android {
    compileSdkVersion version_compileSdk
    buildToolsVersion version_buildTools

    defaultConfig {
        minSdkVersion version_minSdk
        targetSdkVersion version_compileSdk

        multiDexEnabled true

        resValue "string", "manifest_package_id", "com.roadpass.icecreamroll"

        resValue 'string', 'app_name', "Ice Cream Roll"

        applicationId "com.roadpass.icecreamroll"
        versionCode 14
        versionName "1.1.4"
    }


    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    packagingOptions {
        resources {
            excludes += ['META-INF/LICENSE-LGPL-2.1.txt', 'META-INF/LICENSE-LGPL-3.txt', 'META-INF/LICENSE-W3C-TEST']
        }
    }

    configurations.all {
        resolutionStrategy {
            eachDependency { details ->
                if (details.requested.group == 'com.android.support') {
                    if (details.requested.name != 'multidex' && details.requested.name != 'multidex-instrumentation') {
                        details.useVersion "${version_library_appcompat}"
                    }
                }
            }
        }
    }


    lintOptions {
        disable 'MissingTranslation', 'InvalidPackage', 'ObsoleteLintCustomCheck', 'DefaultLocale', 'UnusedAttribute', 'VectorRaster', 'InflateParams', 'IconLocation', 'UnusedResources', 'TypographyEllipsis'
        abortOnError false
    }
    namespace 'com.roadpass.icecreamroll'
}

dependencies {

    tasks.withType(JavaCompile).configureEach{options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']}



    implementation 'com.applovin:applovin-sdk:10.3.1'
    implementation 'androidx.annotation:annotation:1.0.0'



    // Support libraries
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
    implementation 'androidx.preference:preference:1.1.1'
    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'

    // UI Libs
    implementation 'com.mikepenz:fastadapter:3.2.3@aar'
    implementation 'com.mikepenz:fastadapter-commons:3.0.0@aar'
    implementation 'com.mikepenz:fastadapter-extensions:3.0.0@aar'
    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
    implementation 'cat.ereza:customactivityoncrash:2.2.0'
    implementation 'de.psdev.licensesdialog:licensesdialog:1.8.3'
    implementation 'com.github.championswimmer:SimpleFingerGestures_Android_Library:1.1'
    implementation 'com.nononsenseapps:filepicker:4.2.1'
    implementation 'org.slf4j:slf4j-android:1.7.21'
    implementation 'com.google.android.gms:play-services-ads:20.6.0'

    implementation ('com.github.ozodrukh:CircularReveal:2.0.1@aar') {
        transitive = true
    }

    implementation('com.github.turing-tech:MaterialScrollBar:13.3.0') {
        exclude group: 'com.android.support'
    }
    implementation 'com.jakewharton:butterknife:10.0.0'
    implementation 'com.google.firebase:firebase-messaging-ktx:23.2.1'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'

    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"

    implementation "androidx.browser:browser:1.4.0"

    implementation("com.squareup.okhttp3:okhttp:4.10.0")

    implementation platform('com.google.firebase:firebase-bom:31.0.0')
    implementation 'com.google.firebase:firebase-analytics-ktx'
    implementation("com.google.firebase:firebase-installations-ktx:17.1.4")

    implementation 'com.appsflyer:af-android-sdk:6.9.0'
    implementation "com.android.installreferrer:installreferrer:2.2"

    def multidex_version = "2.0.1"
    implementation "androidx.multidex:multidex:$multidex_version"

    implementation files('../unityLibrary.aar')

}

repositories {
    google()
    mavenCentral()
}
